Finished refactor of new datapack generation
Still produces some wrong code, but that's for another day